--- a/index.html
+++ b/index.html
@@ -4,111 +4,245 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PlantSaga | Every Plant has a Story</title>
+    <title>PlantSaga | Every Plant Has a Story</title>
     <meta name="description"
-        content="PlantSaga - Your ultimate companion for plant care. Discover the story behind every leaf. Mobile app coming soon.">
+        content="PlantSaga - The story of your plants. AI care, photo diaries, community, and marketplace. Discover the journey behind every leaf.">
     <meta name="keywords"
-        content="Plant Marketplace, Plant Community, Plant ID, Plant Story, Plant Diary, AI Plant Doctor, Succulent Care, Urban Jungle, Plant, Plant care, Tree, seed, flower, fruit, Bonsai, PlantSaga, Global Plants">
-    <meta property="og:title" content="PlantSaga | Every Plant has a Story">
+        content="Plant Marketplace, Plant Community, Plant ID, Plant Story, Plant Diary, AI Plant Doctor, Succulent Care, Urban Jungle, Plant, Plant care, Tree, seed, flower, fruit, Bonsai, PlantSaga">
+    <meta property="og:title" content="PlantSaga | Every Plant Has a Story">
     <meta property="og:description"
-        content="Discover the story behind every leaf with PlantSaga. Mobile app coming soon.">
+        content="Transform your plant care into a journey. Document the past, nurture the present, seed the future.">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="logo.png">
 
     <!-- Modern Typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Outfit:wght@400;700&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Outfit:wght@400;600;700;800&display=swap"
         rel="stylesheet">
 
     <style>
         :root {
-            --primary: #2d5a27;
-            --primary-light: #4a8c43;
-            --bg-color: #f4f9f4;
+            --primary: #1b4332;
+            --primary-light: #2d6a4f;
+            --accent: #95d5b2;
+            --bg-color: #f8faf8;
             --text-main: #1a1a1a;
-            --text-muted: #555;
+            --text-muted: #4a5568;
             --white: #ffffff;
+            --shadow: 0 10px 40px rgba(0, 0, 0, 0.08);
+            --transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
         }
 
         body {
             font-family: 'Inter', sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            text-align: center;
             background-color: var(--bg-color);
-            background: radial-gradient(circle at top left, #e8f5e9, #f4f9f4);
+            background: radial-gradient(circle at top right, #eaf4ed, var(--bg-color));
             color: var(--text-main);
-            margin: 0;
-            padding: 20px;
+            line-height: 1.6;
+            overflow-x: hidden;
         }
 
-        .content {
-            max-width: 600px;
-            padding: 40px;
-            background: rgba(255, 255, 255, 0.7);
-            backdrop-filter: blur(10px);
-            border-radius: 24px;
-            box-shadow: 0 10px 30px rgba(0, 0, 0, 0.05);
-            border: 1px solid rgba(255, 255, 255, 0.3);
+        .container {
+            max-width: 1000px;
+            margin: 0 auto;
+            padding: 60px 24px;
+        }
+
+        /* Header & Logo */
+        header {
+            text-align: center;
+            margin-bottom: 60px;
+            animation: slideDown 0.8s ease-out;
+        }
+
+        .logo {
+            width: 80px;
+            height: 80px;
+            border-radius: 20px;
+            box-shadow: var(--shadow);
+            margin-bottom: 24px;
+            transition: var(--transition);
+        }
+
+        .logo:hover {
+            transform: scale(1.05) rotate(5deg);
+        }
+
+        /* Hero Section */
+        .hero {
+            text-align: center;
+            margin-bottom: 80px;
             animation: fadeIn 1s ease-out;
         }
 
         h1 {
             font-family: 'Outfit', sans-serif;
-            font-size: 4rem;
+            font-size: clamp(2.5rem, 6vw, 4rem);
             font-weight: 800;
-            margin-bottom: 20px;
+            line-height: 1.1;
             color: var(--primary);
-            letter-spacing: -0.02em;
+            margin-bottom: 24px;
+            letter-spacing: -0.03em;
         }
 
-        p {
-            font-size: 1.25rem;
+        .tagline {
+            font-size: clamp(1.1rem, 3vw, 1.4rem);
+            color: var(--primary-light);
+            font-weight: 500;
+            max-width: 700px;
+            margin: 0 auto 40px;
+            opacity: 0.9;
+        }
+
+        /* App Stores */
+        .app-links {
+            display: flex;
+            justify-content: center;
+            gap: 16px;
+            flex-wrap: wrap;
+            margin-bottom: 20px;
+        }
+
+        .app-button {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            background: var(--primary);
+            color: var(--white);
+            padding: 12px 28px;
+            border-radius: 14px;
+            text-decoration: none;
+            font-weight: 600;
+            font-size: 0.95rem;
+            transition: var(--transition);
+            box-shadow: 0 4px 15px rgba(27, 67, 50, 0.2);
+            cursor: pointer;
+            border: none;
+        }
+
+        .app-button:hover {
+            background: var(--primary-light);
+            transform: translateY(-3px);
+            box-shadow: 0 8px 25px rgba(27, 67, 50, 0.3);
+        }
+
+        .app-button svg {
+            width: 24px;
+            height: 24px;
+            fill: currentColor;
+        }
+
+        /* Content Sections */
+        .main-card {
+            background: var(--white);
+            padding: 48px;
+            border-radius: 32px;
+            box-shadow: var(--shadow);
+            margin-bottom: 60px;
+            border: 1px solid rgba(0, 0, 0, 0.02);
+            animation: slideUp 1s ease-out;
+        }
+
+        .story-text {
+            font-size: 1.15rem;
             color: var(--text-muted);
-            line-height: 1.6;
             margin-bottom: 30px;
         }
 
-        .footer {
-            margin-top: 40px;
+        .features-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 32px;
+            margin-top: 48px;
+            text-align: left;
+        }
+
+        .feature-item h3 {
+            font-family: 'Outfit', sans-serif;
+            color: var(--primary);
+            margin-bottom: 8px;
+            font-size: 1.25rem;
+        }
+
+        .feature-item p {
+            font-size: 0.95rem;
+            color: var(--text-muted);
+        }
+
+        /* Footer */
+        footer {
+            text-align: center;
+            padding: 40px 0;
             border-top: 1px solid rgba(0, 0, 0, 0.05);
-            padding-top: 20px;
-            display: flex;
-            flex-direction: column;
-            gap: 12px;
+            animation: fadeIn 1.5s ease-out;
         }
 
-        .footer-links {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            flex-wrap: wrap;
+        .support-card {
+            background: #edf5f0;
+            display: inline-block;
+            padding: 16px 32px;
+            border-radius: 100px;
+            margin-bottom: 32px;
+            transition: var(--transition);
         }
 
-        .directory-mention {
-            font-size: 0.75rem;
-            color: #999;
-            font-weight: 400;
+        .support-card:hover {
+            background: #e2ede5;
         }
 
-        a {
+        .support-card p {
+            font-size: 0.9rem;
+            font-weight: 500;
+        }
+
+        .support-card a {
             color: var(--primary);
             text-decoration: none;
-            font-weight: 600;
-            transition: color 0.3s ease;
-            font-size: 0.9rem;
+            font-weight: 700;
         }
 
-        a:hover {
-            color: var(--primary-light);
+        .footer-nav {
+            display: flex;
+            justify-content: center;
+            gap: 24px;
+            margin-top: 24px;
         }
 
+        .footer-nav a {
+            color: #999;
+            text-decoration: none;
+            font-size: 0.85rem;
+            font-weight: 500;
+            transition: var(--transition);
+        }
+
+        .footer-nav a:hover {
+            color: var(--primary);
+        }
+
+        /* Animations */
         @keyframes fadeIn {
             from {
                 opacity: 0;
-                transform: translateY(20px);
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+
+        @keyframes slideDown {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
             }
 
             to {
@@ -117,30 +251,124 @@
             }
         }
 
-        @media (max-width: 480px) {
-            h1 {
-                font-size: 2.5rem;
+        @keyframes slideUp {
+            from {
+                opacity: 0;
+                transform: translateY(40px);
             }
 
-            .content {
-                padding: 30px 20px;
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @media (max-width: 640px) {
+            .container {
+                padding: 40px 20px;
+            }
+
+            .main-card {
+                padding: 32px 24px;
+            }
+
+            h1 {
+                font-size: 2.5rem;
             }
         }
     </style>
 </head>
 
 <body>
-    <main class="content">
-        <h1>PlantSaga</h1>
-        <p>Every plant has a journey. Our mobile app is coming soon to the App Store and Google Play.</p>
-        <div class="footer">
-            <div class="footer-links">
-                <a href="privacy.html">Privacy Policy</a>
-                <a href="https://plants.jstor.org/" target="_blank" rel="noopener">Global Plant Directories</a>
+    <div class="container">
+        <header>
+            <img src="logo.png" alt="PlantSaga Logo" class="logo">
+        </header>
+
+        <section class="hero">
+            <h1>Every Plant Has a Story.<br>Start Writing Yours with PlantSaga.</h1>
+            <p class="tagline">The story of your plants. AI care, photo diaries, community, and marketplace.</p>
+
+            <div class="app-links">
+                <button class="app-button" onclick="showComingSoon()">
+                    <svg viewBox="0 0 24 24">
+                        <path
+                            d="M17.5,12c0,0.5-0.1,1-0.3,1.5l3.1,3.1c0.5-1.4,0.7-3,0.7-4.6c0-5.5-4.5-10-10-10C8.5,2,5.5,3.1,3.2,5L5.7,7.5 c1.5-1,3.4-1.5,5.3-1.5C14.6,6,17.5,8.7,17.5,12z M3.3,4.7L2,6l2.1,2.1C3.4,9.3,3,10.6,3,12c0,5.5,4.5,10,10,10 c1.4,0,2.7-0.3,3.9-1L19,23l1.3-1.3L3.3,4.7z M13,20c-4.4,0-8-3.6-8-8c0-0.6,0.1-1.2,0.2-1.8l9.6,9.6C14.2,19.9,13.6,20,13,20z" />
+                    </svg>
+                    App Store
+                </button>
+                <button class="app-button" onclick="showComingSoon()">
+                    <svg viewBox="0 0 24 24">
+                        <path
+                            d="M3,20.5V3.5C3,2.91,3.34,2.39,3.84,2.13L13.14,12L3.84,21.87C3.34,21.61,3,21.09,3,20.5Z M4.65,2.1L13.88,11.33L16.22,8.99L5.42,2.83C5.16,2.68,4.89,2.58,4.65,2.1Z M14.59,12.04L4.65,21.9C4.89,21.42,5.16,21.32,5.42,21.17L16.22,15.01L14.59,12.04Z M17.03,14.55L14.62,12.11L17.03,9.45L20.58,11.48C21.11,11.78,21.11,12.23,20.58,12.53L17.03,14.55Z" />
+                    </svg>
+                    Google Play
+                </button>
             </div>
-            <span class="directory-mention">Proudly referenced in Global Plant Databases</span>
-        </div>
-    </main>
+            <p style="font-size: 0.8rem; color: #888; margin-top: 10px;">Coming Soon to Mobile</p>
+        </section>
+
+        <main class="main-card">
+            <div class="story-text">
+                <p style="margin-bottom: 24px;">Transform your plant care from a chore into a journey.
+                    <strong>PlantSaga</strong> is the definitive companion for the modern plant parent, combining
+                    cutting-edge AI technology with a thriving global community.</p>
+
+                <p style="margin-bottom: 24px;">The heart of PlantSaga is tracing the history, journey, and story of a
+                    plant. Through detailed photo diaries and comprehensive care logs, you create a living archive of
+                    every leaf and bloom.</p>
+
+                <p style="margin-bottom: 24px;">When your plant outgrows its space or you're ready for something new,
+                    you can pass that legacy to new owners in our <strong>Marketplace</strong> or preserve its journey
+                    in the <strong>Memories</strong> section.</p>
+
+                <p
+                    style="font-style: italic; font-weight: 500; color: var(--primary); margin-top: 40px; font-size: 1.25rem;">
+                    Your plants aren't just decor; they are a legacy. <br>
+                    Document the past. Nurture the present. Seed the future.
+                </p>
+            </div>
+
+            <div class="features-grid">
+                <div class="feature-item">
+                    <h3>AI Care</h3>
+                    <p>Advanced diagnostics and personalized care schedules.</p>
+                </div>
+                <div class="feature-item">
+                    <h3>Photo Diaries</h3>
+                    <p>Visual timelines of growth and milestones.</p>
+                </div>
+                <div class="feature-item">
+                    <h3>Community</h3>
+                    <p>Connect with local and global plant enthusiasts.</p>
+                </div>
+                <div class="feature-item">
+                    <h3>Marketplace</h3>
+                    <p>Securely buy and sell plants with their histories.</p>
+                </div>
+            </div>
+        </main>
+
+        <footer>
+            <div class="support-card">
+                <p>Questions? Reach out: <a href="mailto:team.plantsaga@gmail.com">team.plantsaga@gmail.com</a></p>
+            </div>
+
+            <p style="font-size: 0.9rem; color: #666;">Download PlantSaga and start your story today.</p>
+
+            <div class="footer-nav">
+                <a href="privacy.html">Privacy Policy</a>
+                <span style="color: #ddd;">|</span>
+                <span class="copyright" style="color: #999; font-size: 0.85rem;">© 2026 PlantSaga</span>
+            </div>
+        </footer>
+    </div>
+
+    <script>
+        function showComingSoon() {
+            alert("PlantSaga is sprouting! We'll be on the stores very soon. Stay tuned!");
+        }
+    </script>
 </body>
 
 </html>
