Update social links: Instagram alert and LinkedIn profile

--- a/index.html
+++ b/index.html
@@ -428,8 +428,8 @@
 
             <div class="footer-links">
                 <a href="privacy.html">Privacy Policy</a>
-                <a href="#">Instagram</a>
-                <a href="#">Twitter</a>
+                <a href="javascript:void(0)" onclick="showComingSoon()">Instagram</a>
+                <a href="https://www.linkedin.com/company/plantsaga" target="_blank" rel="noopener">LinkedIn</a>
             </div>
             <p style="margin-top: 40px; font-size: 0.8rem; color: #999;">© 2026 PlantSaga. All rights reserved.</p>
         </div>
