Update homepage features: AI Assistance, Plant Care, and Trace Journey

--- a/index.html
+++ b/index.html
@@ -398,12 +398,16 @@
 
         <div class="features-grid">
             <div class="feature-item">
-                <h3>AI Care</h3>
-                <p>Advanced diagnostics and personalized care schedules tailored to each species' unique story.</p>
+                <h3>AI Assistance</h3>
+                <p>Leverage cutting-edge AI for instant identification and personalized diagnostic support.</p>
             </div>
             <div class="feature-item">
-                <h3>Photo Diaries</h3>
-                <p>Document every milestone and create stunning visual timelines of your plant's growth journey.</p>
+                <h3>Plant Care & Tasks</h3>
+                <p>Stay on top of your plant's needs with smart scheduling and interactive care tasks.</p>
+            </div>
+            <div class="feature-item">
+                <h3>Trace Plant Journey</h3>
+                <p>Document every leaf and bloom in a beautiful timeline to preserve your plant's unique history.</p>
             </div>
             <div class="feature-item">
                 <h3>Community</h3>
