Expand SEO metadata with scanning keywords and botanical directory names

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PlantSaga | Every Plant Has a Story</title>
     <meta name="description"
-        content="PlantSaga - The story of your plants. AI care, photo diaries, community, and marketplace. Discover the journey behind every leaf.">
+        content="PlantSaga - The story of your plants. AI care, photo diaries, community, and marketplace. Advanced plant scan, flower identification, and tree health diagnostics.">
     <meta name="keywords"
-        content="Plant Marketplace, Plant Community, Plant ID, Plant Story, Plant Diary, AI Plant Doctor, Succulent Care, Urban Jungle, Plant, Plant care, Tree, seed, flower, fruit, Bonsai, PlantSaga">
+        content="Plant Scan, Plant images, Plant photo, Plant scan app, Plant care, flower scan, fruit scan, plant name, flower name, fruit name, tree name, tree scan, plant scanner, plant scientific name, Plant Marketplace, Plant Community, Plant ID, Plant Story, Plant Diary, AI Plant Doctor, Succulent Care, Urban Jungle, Plant, Plant care, Tree, seed, flower, fruit, Bonsai, PlantSaga, Aloe Vera, Aloe barbadensis, Bamboo, Phyllostachys aurea, Bambusa aridinarifolia, Basil, Ocimum basilicum, Cactus, Cactaceae, Eucalyptus, Fiddle-Leaf Fig, Ficus lyrata, Hibiscus, Hydrangea, Monstera deliciosa, Orchid, Cattleya, Peace Lily, Spathiphyllum, Peony, Paeonia, Philodendron, Poinsettia, Euphorbia pulcherrima, Rose, Rosa, Garden Rose, Snake Plant, Sansevieria trifasciata, Dracaena trifasciata, Sunflower, Helianthus annuus, Tulip, Tulipa, ZZ Plant, Zamioculcas zamiifolia, Botanical gardens, Indoor plants, Houseplants, Nursery, Gardening, Shrubs, Succulents">
     <meta property="og:title" content="PlantSaga | Every Plant Has a Story">
     <meta property="og:description"
         content="Transform your plant care into a journey. Document the past, nurture the present, seed the future.">
