Optimize URL structure: add canonical tag and use root relative links

--- a/privacy.html
+++ b/privacy.html
@@ -136,7 +136,7 @@
 
 <body>
     <div class="container">
-        <a href="index.html" class="back-link">← Back to Homepage</a>
+        <a href="./" class="back-link">← Back to Homepage</a>
 
         <article class="policy-card">
             <h1>Privacy Policy</h1>
