--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         content="Transform your plant care into a journey. Document the past, nurture the present, seed the future.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="logo.png">
+    <link rel="canonical" href="https://plantsaga.com/">
 
     <!-- Modern Typography -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -348,7 +349,7 @@
 <body>
     <nav>
         <div class="container nav-content">
-            <a href="#" class="brand">
+            <a href="./" class="brand">
                 <img src="logo.png" alt="PlantSaga Logo" class="nav-logo">
                 <span class="brand-name">PlantSaga</span>
             </a>
