--- a/index.html
+++ b/index.html
@@ -363,13 +363,14 @@
             <p class="tagline">The story of your plants. AI care, photo diaries, community, and marketplace.</p>
 
             <div class="app-links">
-                <button class="app-button" onclick="showComingSoon()">
-                    <svg viewBox="0 0 24 24">
+                <a href="https://apps.apple.com/us/app/plantsaga/id6757720295" class="app-button" target="_blank"
+                    rel="noopener">
+                    <svg viewBox="0 0 384 512">
                         <path
-                            d="M17.5,12c0,0.5-0.1,1-0.3,1.5l3.1,3.1c0.5-1.4,0.7-3,0.7-4.6c0-5.5-4.5-10-10-10C8.5,2,5.5,3.1,3.2,5L5.7,7.5 c1.5-1,3.4-1.5,5.3-1.5C14.6,6,17.5,8.7,17.5,12z M3.3,4.7L2,6l2.1,2.1C3.4,9.3,3,10.6,3,12c0,5.5,4.5,10,10,10 c1.4,0,2.7-0.3,3.9-1L19,23l1.3-1.3L3.3,4.7z M13,20c-4.4,0-8-3.6-8-8c0-0.6,0.1-1.2,0.2-1.8l9.6,9.6C14.2,19.9,13.6,20,13,20z" />
+                            d="M318.7 268.7c-.2-36.7 16.4-64.4 50-84.8-18.8-26.9-47.2-41.7-84.7-44.6-35.5-2.8-74.3 21.8-88.5 21.8-11.4 0-51.1-20.8-82.3-20.2-41.2.5-78.9 23.5-100 60.1-44.6 77-11.5 191.9 31.2 254.1 21.3 30.8 47.6 64.2 81.2 62.9 31.6-1.2 44.1-20.1 82.3-20.1 38 0 49.1 20.1 82.3 18.2 34.4-1.3 57.1-29.8 77.8-60.5 24.5-36.7 34.4-72.3 34.6-73.9-.8-.3-67.2-25.9-67.4-103zM281.5 81.9c13.9-17 23.3-40.3 20.8-63.7-21.6 1.1-47.5 14.5-62.9 32.5-13.9 16.2-25.9 40.3-22.9 63.1 23.8 1.9 47.8-12.8 65-31.9z" />
                     </svg>
                     App Store
-                </button>
+                </a>
                 <button class="app-button" onclick="showComingSoon()">
                     <svg viewBox="0 0 24 24">
                         <path
