--- a/index.html
+++ b/index.html
@@ -371,13 +371,14 @@
                     </svg>
                     App Store
                 </a>
-                <button class="app-button" onclick="showComingSoon()">
+                <a href="https://play.google.com/store/apps/details?id=plant.care.app" class="app-button"
+                    target="_blank" rel="noopener">
                     <svg viewBox="0 0 24 24">
                         <path
                             d="M3,20.5V3.5C3,2.91,3.34,2.39,3.84,2.13L13.14,12L3.84,21.87C3.34,21.61,3,21.09,3,20.5Z M4.65,2.1L13.88,11.33L16.22,8.99L5.42,2.83C5.16,2.68,4.89,2.58,4.65,2.1Z M14.59,12.04L4.65,21.9C4.89,21.42,5.16,21.32,5.42,21.17L16.22,15.01L14.59,12.04Z M17.03,14.55L14.62,12.11L17.03,9.45L20.58,11.48C21.11,11.78,21.11,12.23,20.58,12.53L17.03,14.55Z" />
                     </svg>
                     Google Play
-                </button>
+                </a>
             </div>
         </section>
 
